--- a/CardGameGUI.form
+++ b/CardGameGUI.form
@@ -24,17 +24,10 @@
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignCardLayout"/>
   <SubComponents>
-    <Component class="mainMenuPanel" name="mainMenuPanel">
+    <Component class="MainMenuPanel" name="mainMenuPanel">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
           <CardConstraints cardName="mainMenu"/>
-        </Constraint>
-      </Constraints>
-    </Component>
-    <Component class="playerSignUpPanel" name="playerSignUpPanel">
-      <Constraints>
-        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
-          <CardConstraints cardName="playerSignUp"/>
         </Constraint>
       </Constraints>
     </Component>
